Added jekyll collections to auto-add future topics

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,14 @@
 baseurl: "/peoples-guide"
 layout: default
+
+defaults:
+  - scope:
+      path: ""
+      type: topics
+    values:
+      layout: default
+
+collections:
+  topics:
+    output: true
+    permalink: /topics/:path/
